# wGPUI

./: Cargo.toml
crates/gpui/src/elements/: div.rs  mod.rs  shader_surface.rs
crates/gpui_macos/: Cargo.toml
crates/gpui_macos/src/: gpui_macos.rs  wgpu_renderer.rs  window.rs
crates/gpui_platform/: Cargo.toml
crates/gpui_wgpu/: CUSTOM_SHADER.md
crates/gpui_wgpu/src/: wgpu_context.rs  wgpu_renderer.rs
crates/gpui_windows/src/: direct_write.rs  gpui_windows.rs  wgpu_renderer.rs  window.rs
examples/gpui-example/: Cargo.toml
examples/gpui-example/src/: main.rs
