[package]
name = "gpui-example"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = { path = "../../crates/gpui", default-features = false }
gpui_platform = { path = "../../crates/gpui_platform", features = ["font-kit"] }
gpui_wgpu = { path = "../../crates/gpui_wgpu" }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "=0.24.0"
core-text = "=21.0.0"
